Fixed some tests
Fixed proj files for proper cleaning

added build script

--- a/conApp/conApp.csproj
+++ b/conApp/conApp.csproj
@@ -9,4 +9,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <Target Name="PostClean" AfterTargets="Clean">
+    <Exec Command="rm -rf ./bin" />
+    <Exec Command="rm -rf ./obj" />
+  </Target>
+
 </Project>
