--- a/fizzBuzzLib/fizzBuzzLib.csproj
+++ b/fizzBuzzLib/fizzBuzzLib.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <Target Name="PostClean" AfterTargets="Clean">
+    <Exec Command="rm -rf ./bin" />
+    <Exec Command="rm -rf ./obj" />
+  </Target>
+
 </Project>
